Ajuste layout mobile e como funciona

--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -13,9 +13,68 @@
           <h1 class="page-header center">Chega de sofrer para achar, comprar e enviar seus produtos, Vendedor Amazon!</h1>
           <div class="row">
               <iframe width="100%" height="415" src="https://www.youtube.com/embed/fyaI4-5849w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-           <br /><br /><br /><br /><br /><br />
+           <br /><br /><br />
+           <h3 class="page-header">Veja abaixo um comparativo com os serviços mais utilizados para busca de produtos</h3>
+           <div class="col-md-4">
+            <div class="box-comparativo-valor">
+                <div class="box-valor">
+                    <p class="seja center">VOI Services</p>
+                    <p class="assinate-span"><span>U$ 54,90</span>/mês</p>
+                    <small>*Sem adesão. Cancele a qualquer momento.</small>
+                    <ul>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Disponibiliza produtos qualificados e lucrativos</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Venda de produtos</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Compra com Paypal</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Envio para Amazon até 3 dias após a compra</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Redirecionamento Grátis</span></li>
+                    </ul>
+                    <div class="contem-btn-ass">
+                         <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Assine Agora</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="box-comparativo-valor">
+                <div class="box-valor">
+                    <p class="seja center">Tatical Arbitrage</p>
+                    <p class="assinate-span"><span>U$ 100,00</span>/mês</p>
+                    <small>*Há similares com custo relativo.</small>
+                    <ul class="opacit-text">
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Disponibiliza produtos qualificados e lucrativos</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Venda de produtos</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Compra com Paypal</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Envio para Amazon até 3 dias após a compra</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Redirecionamento Grátis</span></li>
+                    </ul>
+                    <div class="contem-btn-ass">
+                        <a class="btn btn-default no-service" href="javascript:void(0)">Não oferecemos</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="box-comparativo-valor">
+                <div class="box-valor">
+                    <p class="seja center">Bolo List</p>
+                    <p class="assinate-span"><span>U$ 35,00</span>/mês</p>
+                    <small>*Valor médio de R$ 120,00.<br></small>
+                    <ul class="opacit-text">
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Disponibiliza produtos qualificados e lucrativos</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Venda de produtos</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Compra com Paypal</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Envio para Amazon até 3 dias após a compra</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Redirecionamento Grátis</span></li>
+                    </ul>
+                    <div class="contem-btn-ass">
+                        <a class="btn btn-default no-service" href="javascript:void(0)">Não oferecemos</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
            <div class="col-md-12 box-comparativo">
-                <h3 class="page-header">Veja abaixo um comparativo com os demais serviços oferecidos</h3>
+                <h3 class="page-header">Veja abaixo um comparativo real de taxas pagas para compra de produtos</h3>
                   <label>Considerando uma compra no valor de $500,00 USD em produtos sendo 25 itens.</label>
                 <div class="table-responsive">
             <br>
@@ -79,19 +138,8 @@
             <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Seja Assinante</a><br><br>
           </div>
         </div>
-        <div class="col-md-12">
-            <div class="col-md-4">
-                <div class="box-comparativo">
-                    <div class="box-valor">
-                        <p class="seja">Valor Assinatura</p>
-                        <p class="assinate-span"><span>U$54,90</span>/mês</p>
-                        <ul>
-                            <li><i class="fa fa-fw fa-check"></i> Redirecionamento Grátis</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+
         <div class="col-md-12"><br /><br /><br />
             <h3 class="page-header">Abaixo um passo-a-passo de como funciona nosso serviço</h3>
             <ul class="timeline">
