--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -2032,10 +2032,10 @@ footer.fixed-footer{
 @media (max-width: 767px){
 
     .sistema .navbar-brand img:first-child{
-        margin-top: 10px;
+        margin-top: 0;
     }
 
-    .sistema .navbar-brand img:last-child{
+    .box-assine-agora {
         display: none;
     }
 
