--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -65,9 +65,9 @@
                 <img src="/static/img/imagem-cadastro.png" width="100%" />
                 <br><br><br>
                 <div class="box-valor">
-                    <p class="seja">Seja Assinante por apenas</p>
-                    <p class="assinate-span"><span>U$54,90</span>/mês</p>
-                    <small>e tenha acesso a todas as vantagens de ser um assinante VOI Services</small>
+                    <p class="seja">{% trans "Seja Assinante por apenas" %}</p>
+                    <p class="assinate-span"><span>U${% trans "54,90" %}</span>{% trans "/mês" %}</p>
+                    <small>{% trans "e tenha acesso a todas as vantagens de ser um assinante VOI Services" %}</small>
                 </div>
                 <br><br>
                 <label> {% trans "Leia <a href='/pt/termos-e-condicoes-de-uso.html' class='download'>aqui</a> nossos termos e condições de uso da plataforma." %}</label>
