ajuste para a cobrança mínima funcionar no envio pago.

--- a/shipment/templates/minimum_value.html
+++ b/shipment/templates/minimum_value.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% if minimum_value %}
 <!-- Aviso de valor minimo -->
-<div class="bs-example" id="alerta-valor-minimo">
+<div class="bs-example minimum-value-alert {% if shipment_has_payment is False %}hide{% endif %}" id="alerta-valor-minimo">
     <div class="alert alert-warning">
         <strong>{% trans "Importante" %}!</strong> {% trans "Valor mínimo por envio é de" %} U$ {{ minimum_value }}.
     </div>
