--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -129,7 +129,7 @@
                     {% endif %}
                 </p>
 
-                {% minimum_value_alert %}
+                {% minimum_value_alert shipment %}
 
             </div>
             {% timezone_name LANGUAGE_CODE as mytz %}
