--- a/store/templates/admin/store/lotreport/change_list.html
+++ b/store/templates/admin/store/lotreport/change_list.html
@@ -1,7 +1,7 @@
 {% extends "admin/change_list.html" %}
-{% load admin_list lots %}
+{% load lots %}
 
 {% block result_list %}
   {% result_list cl %}
 {% endblock %}
-{% block pagination %}{% my_pagination cl %}{% endblock %}
+{% block pagination %}{% pagination cl %}{% endblock %}
