--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -39,8 +39,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                     <img src="/static/img/logo_sup.png" />
+                <a href="/" class="navbar-brand page-scroll">
+                    <img src="/static/img/logo_sup.png" /><span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span><!--<img src="/static/img/logo_bottom.png" />-->
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
