--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -42,10 +42,10 @@
                     <small>*Há similares com custo relativo.</small>
                     <ul class="opacit-text">
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Disponibiliza produtos qualificados e lucrativos</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Venda de produtos</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Compra com Paypal</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Envio para Amazon até 3 dias após a compra</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Redirecionamento Grátis</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Venda de produtos</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Compra com Paypal</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Envio para Amazon até 3 dias após a compra</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Redirecionamento Grátis</span></li>
                     </ul>
                     <div class="contem-btn-ass">
                         <a class="btn btn-default no-service" href="javascript:void(0)">Não oferecemos</a>
@@ -61,10 +61,10 @@
                     <small>*Valor médio de R$ 120,00.<br></small>
                     <ul class="opacit-text">
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Disponibiliza produtos qualificados e lucrativos</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Venda de produtos</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Compra com Paypal</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Envio para Amazon até 3 dias após a compra</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Redirecionamento Grátis</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Venda de produtos</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Compra com Paypal</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Envio para Amazon até 3 dias após a compra</span></li>
+                        <li><i class="fa fa-fw fa-times-circle-o"></i> <span>Redirecionamento Grátis</span></li>
                     </ul>
                     <div class="contem-btn-ass">
                         <a class="btn btn-default no-service" href="javascript:void(0)">Não oferecemos</a>
