--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -39,10 +39,8 @@
                   {% if user|has_user_perm:'view_users' %}
                   <th>{% trans "Usuário" %}</th>
                   {% endif %}
-                  {% if billing_type == 2 %}
-                    {% if shipment.status == 1 and user|has_service_perm:'add_product' or shipment.status > 1 %}
+                  {% if shipment.status == 1 and user|has_service_perm:'add_product' or shipment.status > 1 %}
                   <th>{% trans "Serviços" %}</th>
-                    {% endif %}
                   {% endif %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
                   <th>{% trans "Retirar" %}</th>
@@ -71,7 +69,6 @@
                   {% if user|has_user_perm:'view_users' %}
                   <td>{{ shipment.user.first_name }}</td>
                   {% endif %}
-                  {% if billing_type == 2 %}
                   <td>
                   {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
                       <a class="btn btn-primary add-service-product-shipment" title="{% trans 'Atribuir serviços' %}" href="javascript:void(0);" data-shipment-product-id="{{product.id}}" data-shipment-product-uid="{{product.uid}}"><i class="fa fa-fw fa-cogs"></i></a>
@@ -80,7 +77,6 @@
                       <a class="btn btn-primary add-service-product-shipment" title="{% trans 'Visualizar serviços' %}" href="javascript:void(0);" data-shipment-product-id="{{product.id}}" data-shipment-product-uid="{{product.uid}}"><i class="fa fa-fw fa-cogs"></i></a>
                   {% endif %}
                   </td>
-                  {% endif %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
                   {% trans "Excluir" as delete %}
                   <td>
@@ -124,7 +120,7 @@
 
                 <p class="{% if shipment_has_payment is False %}hide{% endif %}">
                     <strong><i class="fa fa-fw fa-money"></i> {% trans "Valor Total" %}: </strong> U$ <span id="totalCost">{{ shipment.cost|floatformat:2|localize }}</span>
-                    {% if billing_type == 2 and shipment.status == 1 %}
+                    {% if shipment.status == 1 %}
                     <span class="help help-tooltip help-icon" title="{% blocktrans %}Este valor poderá ser alterado após inclusão dos serviços necessários para o preparo.{% endblocktrans %}"></span>
                     {% endif %}
                 </p>
@@ -513,7 +509,6 @@
         </div>
      </form>
     {% endif %}
-    {% if billing_type == 2 %}
     {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
     <form>
     <input type="hidden" name="service_product_id" value="">
@@ -552,6 +547,5 @@
     </div>
     {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
     </form>
-    {% endif %}
     {% endif %}
 {% endblock %}
