--- a/utils/templates/admin/utils/accounting/change_list.html
+++ b/utils/templates/admin/utils/accounting/change_list.html
@@ -15,6 +15,9 @@
     <a href="{%url 'admin:utils_accounting_change' 'simulate' %}" class="btn btn-high btn-success">{% trans "Simular fechamento" %}</a>
 </li>
 <li>
+    <a href="{% url 'close_accounting_sandbox' %}?sandbox=1" class="btn btn-high btn-success">{% trans "(Sandbox) Realizar fechamento" %}</a>
+</li>
+<li>
     <a href="{%url 'admin:utils_accounting_change' 'simulate_sandbox' %}" class="btn btn-high btn-success">{% trans "(Sandbox) Simular fechamento" %}</a>
 </li>
 {% endblock %}
