--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -103,11 +103,11 @@
                         </ul>
                     </li>
                     {% endif %}
-                    {% if request.user.is_authenticated %}
+
                     <li class="{% block storelist %}{% endblock %}">
                         <a href="{% url 'store' %}" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %}</a>
                     </li>
-                    {% endif %}
+
                     <li class="{% block comoFunciona %}{% endblock %}">
                         <a href="{% url 'how_it_works' %}" class=""><i class="fa fa-leanpub"></i> {% trans "Como Funciona" %}</a>
                     </li>
@@ -203,7 +203,11 @@
                     {% endif %}
 
 {% endcomment %}
-
+                    {% if not user.is_authenticated %}
+                    <li>
+                        <a title="Login" href="/pt/entrar"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
+                    </li>
+                    {% endif %}
                     {% if user.is_authenticated %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><span class="glyphicon glyphicon-cog "></span>  {% trans "Olá" %}, {{ user.first_name }} <b class="caret"></b></a>
