--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -11,9 +11,9 @@
         </div>
         <div class="col-md-10 main">
           <h1 class="page-header center">Chega de sofrer para achar, comprar e enviar seus produtos, Vendedor Amazon!</h1>
-          <div class="row">
+          <!--<div class="row">
               <iframe width="100%" height="415" src="https://www.youtube.com/embed/fyaI4-5849w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-           <br /><br /><br />
+           <br /><br /><br />-->
            <h3 class="page-header">Veja abaixo um comparativo com os serviços mais utilizados para busca de produtos</h3>
            <div class="col-md-4">
             <div class="box-comparativo-valor">
